IMP-1449: Fix Coverage map controls on Mobile UI

--- a/browser/src/app/entity/settings/contractor-account/service-area/modules/coverage-configuration/styles/coverage-modes.scss
+++ b/browser/src/app/entity/settings/contractor-account/service-area/modules/coverage-configuration/styles/coverage-modes.scss
@@ -59,6 +59,9 @@ form {
   @include response-to(xs) {
     margin-top: 16px;
   }
+  &:disabled {
+    opacity: 0.5;
+  }
 }
 
 .find-zip {
