--- a/browser/src/app/theme/switch/switch.component.scss
+++ b/browser/src/app/theme/switch/switch.component.scss
@@ -7,6 +7,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  &.-disabled {
+    opacity: 0.7;
+  }
 }
 .slider {
   width: 31px;
@@ -42,3 +45,5 @@
     color: $primary-500;
   }
 }
+
+
